// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`320px layout matches snapshot 1`] = `
<section
  class="container space-y-6 text-center md:text-left"
  style="opacity: 0; transform: translateY(20px);"
>
  <div
    class="relative inline-flex flex-wrap items-end gap-4 pb-4 mb-6 bg-black after:absolute after:inset-x-0 after:bottom-0 after:h-px after:bg-gray-700"
  >
    <h2
      class="text-3xl font-serif font-semibold tracking-wide text-silver"
    >
      Credentials
    </h2>
    <img
      alt="Certified NNA Notary Signing Agent 2025 badge"
      class="h-14 -mb-6 flex-none"
      src="/nna-badge.png"
    />
  </div>
  <ul
    class="space-y-4"
  >
    <li
      class="flex items-start"
    >
      <svg
        aria-hidden="true"
        class="mr-2 h-5 w-5 text-silver"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clip-rule="evenodd"
          d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="text-platinum"
      >
        Credentials
      </h2>
      <img
        alt="Certified NNA Notary Signing Agent 2025 badge"
        class="mt-4 sm:mt-0 w-16 sm:w-20"
        src="/nna-badge.png"
      />
    </div>
    <div
      class="my-4 h-px bg-gray-700"
    />
    <ul
      class="space-y-4 pl-1"
    >
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Licensed & Bonded
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Certified Signing Agent
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Member of National Notary Association
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`640px layout matches snapshot 1`] = `
<section
  class="container space-y-6 text-center md:text-left"
  style="opacity: 0; transform: translateY(20px);"
>
  <div
    class="relative inline-flex flex-wrap items-end gap-4 pb-4 mb-6 bg-black after:absolute after:inset-x-0 after:bottom-0 after:h-px after:bg-gray-700"
  >
    <h2
      class="text-3xl font-serif font-semibold tracking-wide text-silver"
    >
      Credentials
    </h2>
    <img
      alt="Certified NNA Notary Signing Agent 2025 badge"
      class="h-14 -mb-6 flex-none"
      src="/nna-badge.png"
    />
  </div>
  <ul
    class="space-y-4"
  >
    <li
      class="flex items-start"
    >
      <svg
        aria-hidden="true"
        class="mr-2 h-5 w-5 text-silver"
        fill="currentColor"
        viewBox="0 0 20 20"
      >
        <path
          clip-rule="evenodd"
          d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="text-platinum"
      >
        Credentials
      </h2>
      <img
        alt="Certified NNA Notary Signing Agent 2025 badge"
        class="mt-4 sm:mt-0 w-16 sm:w-20"
        src="/nna-badge.png"
      />
    </div>
    <div
      class="my-4 h-px bg-gray-700"
    />
    <ul
      class="space-y-4 pl-1"
    >
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Licensed & Bonded
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Certified Signing Agent
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Member of National Notary Association
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`1024px layout matches snapshot 1`] = `
<section
  class="container space-y-6 text-center md:text-left"
  style="opacity: 0; transform: translateY(20px);"
>
  <div
    class="relative inline-flex flex-wrap items-end gap-4 pb-4 mb-6 bg-black after:absolute after:inset-x-0 after:bottom-0 after:h-px after:bg-gray-700"
  >
    <h2
      class="text-3xl font-serif font-semibold tracking-wide text-silver"
    >
      Credentials
    </h2>
    <img
      alt="Certified NNA Notary Signing Agent 2025 badge"
      class="h-14 -mb-6 flex-none"
      src="/nna-badge.png"
     />   
    <ul
      class="space-y-4 pl-1"
    >
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Licensed & Bonded
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Certified Signing Agent
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Member of National Notary Association
        </span>
      </li>
    </ul>
  </div>
</section>
`;

exports[`1280px layout matches snapshot 1`] = `
<section
  class="container px-4"
  style="opacity: 0; transform: translateY(20px);"
>
  <div
    class="max-w-3xl mx-auto w-full"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between"
    >
      <h2
        class="text-3xl font-serif font-semibold tracking-wide text-silver"
      >
        Credentials
      </h2>
      <img
        alt="Certified NNA Notary Signing Agent 2025 badge"
        class="mt-4 sm:mt-0 w-16 sm:w-20"
        src="/nna-badge.png"
      />
    </div>
    <div
      class="my-4 h-px bg-gray-700"
    />
    <ul
      class="space-y-4 pl-1"
    >
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Licensed & Bonded
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Certified Signing Agent
        </span>
      </li>
      <li
        class="flex items-start text-platinum text-lg sm:text-xl"
      >
        <svg
          aria-hidden="true"
          class="h-5 w-5 mt-1 mr-2 text-silver"
          fill="currentColor"
          viewBox="0 0 20 20"
        >
          <path
            clip-rule="evenodd"
            d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
            fill-rule="evenodd"
          />
        </svg>
        <span>
          Member of National Notary Association
        </span>
      </li>
    </ul>
  </div>
</section>
`;
